--- a/Help/2 Basic Operations/2.1 Opening a sequence file.html
+++ b/Help/2 Basic Operations/2.1 Opening a sequence file.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Opening a FastQ file</title>
+<title>2.1 - Opening a FastQ file</title>
 <style type="text/css">
 	body {
 		font-family: sans-serif;
@@ -9,7 +9,7 @@
 </style>
 </head>
 <body>
-<h1>Opening a Sequence file</h1>
+<h1>2.1 - Opening a Sequence file</h1>
 <p>
 To open one or more Sequence files interactively simply run the
 program and select File &gt; Open.  You can then select the files
@@ -34,7 +34,7 @@ you want to analyse.
  <li>BAM</li>
  <li>SAM/BAM Mapped only (normally used for colorspace data)</li>
  </ul>
- 
+
  <p>
  * Casava fastq format is the same as regular fastq except that
  the data is usually split across multiple files for a single sample.
@@ -44,20 +44,48 @@ you want to analyse.
  In Casava mode the program will exclude these flagged sequences from
  the report.
  </p>
- 
+
  <p>
  By default FastQC will try to guess the file format from the name
- of the input file.  Anything ending in .sam or .bam will be 
+ of the input file.  Anything ending in .sam or .bam will be
  opened as a SAM/BAM file (using all sequences, mapped and unmapped)
- , and everything else will be treated as FastQ format.  If you want 
+ , and everything else will be treated as FastQ format.  If you want
  to override this detection and specify the file format manually
  then you can use the drop down file filter in the file chooser to
- select the type of file you're going to load. You need to use the 
+ select the type of file you're going to load. You need to use the
  drop down selector to make the program use the Mapped BAM or Casava
  file modes as these won't be selected automatically.
  </p>
- 
- 
+ <hr />
+ <ul>
+	<li><a href="../">FastQC Help Top</a>
+	<ul>
+		<li><a href="../1%20Introduction/1.1%20What%20is%20FastQC.html">1.1 What is FastQC.html</a></li>
+		<li><a href="../2%20Basic%20Operations/">2 Basic Operations</a>
+			<ul>
+				<li><a href="../2%20Basic%20Operations/2.1%20Opening%20a%20sequence%20file.html">2.1 Opening a sequence file</a></li>
+				<li><a href="../2%20Basic%20Operations/2.2%20Evaluating%20Results.html">2.2 Evaluating Results</a></li>
+				<li><a href="../2%20Basic%20Operations/2.3%20Saving%20a%20Report.html">2.3 Saving a Report</a></li>
+			</ul>
+		</li>
+		<li><a href="../3%20Analysis%20Modules/">3 Analysis Modules</a>
+			<ul>
+				<li><a href="../3%20Analysis%20Modules/1%20Basic%20Statistics.html">3.1 Basic Statistics</a></li>
+				<li><a href="../3%20Analysis%20Modules/2%20Per%20Base%20Sequence%20Quality.html">3.2 Per Base Sequence Quality</a></li>
+				<li><a href="../3%20Analysis%20Modules/3%20Per%20Sequence%20Quality%20Scores.html">3.3 Per Sequence Quality Scores</a></li>
+				<li><a href="../3%20Analysis%20Modules/4%20Per%20Base%20Sequence%20Content.html">3.4 Per Base Sequence Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/5%20Per%20Sequence%20GC%20Content.html">3.5 Per Sequence GC Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/6%20Per%20Base%20N%20Content.html">3.6 Per Base N Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/7%20Sequence%20Length%20Distribution.html">3.7 Sequence Length Distribution</a></li>
+				<li><a href="../3%20Analysis%20Modules/8%20Duplicate%20Sequences.html">3.8 Duplicate Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/9%20Overrepresented%20Sequences.html">3.9 Overrepresented Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/10%20Adapter%20Content.html">3.10 Adapter Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/11%20Kmer%20Content.html">3.11 Kmer Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/12%20Per%20Tile%20Sequence%20Quality.html">3.12 Per Tile Sequence Quality</a></li>
+			</ul>
+		</li>
+	</ul>
+</ul>
 </body>
 
 </html>
