--- a/Help/3 Analysis Modules/12 Per Tile Sequence Quality.html
+++ b/Help/3 Analysis Modules/12 Per Tile Sequence Quality.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Per Tile Sequence Quality</title>
+<title>3.12 - Per Tile Sequence Quality</title>
 <style type="text/css">
 	body {
 		font-family: sans-serif;
@@ -9,7 +9,7 @@
 </style>
 </head>
 <body>
-<h1>Per Tile Sequence Quality</h1>
+<h1>3.12 - Per Tile Sequence Quality</h1>
 <h2>Summary</h2>
 <p>
 This graph will only appear in your analysis results if you're using
@@ -21,7 +21,7 @@ with only one part of the flowcell.
 </p>
 <p>
 The plot shows the deviation from the average quality for each tile.
-The colours are on a cold to hot scale, with cold colours being 
+The colours are on a cold to hot scale, with cold colours being
 positions where the quality was at or above the average for that
 base in the run, and hotter colours indicate that a tile had worse
 qualities than other tiles for that base.  In the example below you
@@ -40,27 +40,56 @@ inside the flowcell lane.
 <p>
 This module will issue a warning if any tile shows a mean Phred
 score more than 2 less than the mean for that base across all
-tiles. 
+tiles.
 </p>
 
 <h2>Failure</h2>
 <p>
 This module will raise and error if any tile shows a mean Phred
 score more than 5 less than the mean for that base across all
-tiles. 
+tiles.
 </p>
 
 <h2>Common reasons for warnings</h2>
 <p>
 Whilst warnings in this module can be triggered by individual specific
-events we have also observed that greater variation in the phred 
-scores attributed to tiles can also appear when a flowcell is generally 
-overloaded.  In this case events appear all over the flowcell rather 
+events we have also observed that greater variation in the phred
+scores attributed to tiles can also appear when a flowcell is generally
+overloaded.  In this case events appear all over the flowcell rather
 than being confined to a specific area or range of cycles.  We would
 generally ignore errors which mildly affected a small number of tiles for
 only 1 or 2 cycles, but would pursue larger effects which showed high
-deviation in scores, or which persisted for several cycles. 
+deviation in scores, or which persisted for several cycles.
 </p>
-
+<hr />
+<ul>
+	<li><a href="../">FastQC Help Top</a>
+	<ul>
+		<li><a href="../1%20Introduction/1.1%20What%20is%20FastQC.html">1.1 What is FastQC.html</a></li>
+		<li><a href="../2%20Basic%20Operations/">2 Basic Operations</a>
+			<ul>
+				<li><a href="../2%20Basic%20Operations/2.1%20Opening%20a%20sequence%20file.html">2.1 Opening a sequence file</a></li>
+				<li><a href="../2%20Basic%20Operations/2.2%20Evaluating%20Results.html">2.2 Evaluating Results</a></li>
+				<li><a href="../2%20Basic%20Operations/2.3%20Saving%20a%20Report.html">2.3 Saving a Report</a></li>
+			</ul>
+		</li>
+		<li><a href="../3%20Analysis%20Modules/">3 Analysis Modules</a>
+			<ul>
+				<li><a href="../3%20Analysis%20Modules/1%20Basic%20Statistics.html">3.1 Basic Statistics</a></li>
+				<li><a href="../3%20Analysis%20Modules/2%20Per%20Base%20Sequence%20Quality.html">3.2 Per Base Sequence Quality</a></li>
+				<li><a href="../3%20Analysis%20Modules/3%20Per%20Sequence%20Quality%20Scores.html">3.3 Per Sequence Quality Scores</a></li>
+				<li><a href="../3%20Analysis%20Modules/4%20Per%20Base%20Sequence%20Content.html">3.4 Per Base Sequence Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/5%20Per%20Sequence%20GC%20Content.html">3.5 Per Sequence GC Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/6%20Per%20Base%20N%20Content.html">3.6 Per Base N Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/7%20Sequence%20Length%20Distribution.html">3.7 Sequence Length Distribution</a></li>
+				<li><a href="../3%20Analysis%20Modules/8%20Duplicate%20Sequences.html">3.8 Duplicate Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/9%20Overrepresented%20Sequences.html">3.9 Overrepresented Sequences</a></li>
+				<li><a href="../3%20Analysis%20Modules/10%20Adapter%20Content.html">3.10 Adapter Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/11%20Kmer%20Content.html">3.11 Kmer Content</a></li>
+				<li><a href="../3%20Analysis%20Modules/12%20Per%20Tile%20Sequence%20Quality.html">3.12 Per Tile Sequence Quality</a></li>
+			</ul>
+		</li>
+	</ul>
+</ul>
 </body>
 </html>
