Fix incorrect info in duplicate plot help.

--- a/Help/3 Analysis Modules/8 Duplicate Sequences.html
+++ b/Help/3 Analysis Modules/8 Duplicate Sequences.html
@@ -62,7 +62,7 @@ presence of low complexity contaminants will tend to produce spikes towards the 
 of the plot.  These high duplication peaks will most often appear in the blue trace as
 they make up a high proportion of the original library, but usually disappear in the
 red trace as they make up an insignificant proportion of the deduplicated set.  If peaks
-persist in the blue trace then this suggests that there are a large number of different
+persist in the red trace then this suggests that there are a large number of different
 highly duplicated sequences which might indicate either a contaminant set or a very
 severe technical duplication.
 </p>
