--- a/Help/3 Analysis Modules/7 Sequence Length Distribution.html
+++ b/Help/3 Analysis Modules/7 Sequence Length Distribution.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Sequence Length Distribution</title>
+<title>Sequence length distribution</title>
 <style type="text/css">
 	body {
 		font-family: sans-serif;
@@ -9,13 +9,13 @@
 </style>
 </head>
 <body>
-<h1>Sequence Length Distribution</h1>
+<h1>Sequence length distribution</h1>
 <h2>Summary</h2>
 <p>
 Some high throughput sequencers generate sequence fragments
 of uniform length, but others can contain reads of wildly
-varying lengths.  Even within uniform length libraries some 
-pipelines will trim sequences to remove poor quality base calls 
+varying lengths.  Even within uniform length libraries some
+pipelines will trim sequences to remove poor quality base calls
 from the end.
 </p>
 <p>
